--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 <body class="h-100">
     <!--   sample text here-->
-    <section class="float-left">
+    <section>
         <div class="d-flex justify-content-center py-4">
             <p class="heading" id="heading">Sample</p>
         </div>
     </section>
     <!--button start here-->
-    <div class="container1 d-flex justify-content-center float-left">
+    <div class="container d-flex justify-content-center ">
         <div class="row ">
             <div class="col-12 d-flex justify-content-center align-items-center">
                 <button onclick="fontsize()"><i class="fas fa-plus"></i></button>
@@ -101,7 +101,7 @@
         </div>
     </div>
     <!--  new section-->
-    <div class="container2 ">
+    <div class="container ">
         <div class="row">
             <!-- border-radius here-->
             <div class="col-12 d-flex justify-content-center py-4 text-center">
